--- a/app/src/main/res/layout/activity_sebelum_detail.xml
+++ b/app/src/main/res/layout/activity_sebelum_detail.xml
@@ -65,7 +65,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <android.support.constraint.ConstraintLayout
-            android:id="@+id/linearLayout"
+            android:id="@+id/layoutdetail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="320dp"
@@ -76,7 +76,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gambar">
+            app:layout_constraintTop_toBottomOf="@+id/gambar"
+            app:layout_constraintVertical_bias="0.018">
 
 
             <TextView
@@ -86,10 +87,10 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="32dp"
+                android:fontFamily="@font/droid_sans_bold"
                 android:text="NamaSbl"
                 android:textColor="#000"
                 android:textSize="30sp"
-                android:fontFamily="@font/droid_sans_bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -99,8 +100,8 @@
                 android:layout_height="1dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="0dp"
                 android:layout_marginEnd="32dp"
+                android:layout_marginBottom="0dp"
                 android:alpha="0.5"
                 android:background="@color/bg_primary"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -109,12 +110,12 @@
                 app:layout_constraintTop_toBottomOf="@+id/namaSbl" />
 
             <ScrollView
-                android:scrollbars="none"
                 android:id="@+id/scr"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="64dp"
+                android:layout_marginTop="58dp"
                 android:layout_marginBottom="18dp"
+                android:scrollbars="none"
                 app:layout_constraintTop_toBottomOf="@+id/view"
                 tools:layout_editor_absoluteX="16dp">
 
@@ -124,11 +125,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
                     android:layout_marginEnd="32dp"
+                    android:fontFamily="@font/droid_sans"
                     android:text="Detail"
                     android:textColor="#000"
                     android:textSize="26sp"
-                    android:fontFamily="@font/droid_sans"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    app:layout_constraintStart_toStartOf="parent" />
             </ScrollView>
 
         </android.support.constraint.ConstraintLayout>
