--- a/app/src/main/res/layout/activity_saatbk_detail.xml
+++ b/app/src/main/res/layout/activity_saatbk_detail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context="com.android.pkbv2.sebelum.SebelumDetail">
+    tools:context="com.pkbv2.sebelum.SebelumDetail">
 
 
     <android.support.constraint.ConstraintLayout
