--- a/app/src/main/res/layout/activity_sebelum.xml
+++ b/app/src/main/res/layout/activity_sebelum.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.android.pkbv2.sebelum.SebelumActivity"
+    tools:context="com.pkbv2.sebelum.SebelumActivity"
     android:background="@color/bg_primary">
 
     <android.support.constraint.ConstraintLayout
