--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.android.pkbv2.SplashScreen"
+    tools:context="com.pkbv2.SplashScreen"
     android:background="#6E6C6C">
 
     <ImageView
